# mynth-app

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  COMMERCIAL-LICENSE.md  Cargo.toml  LICENSE.md  README.md  STREAM.md  auto-imports.d.ts  components.json  configuration.md  drizzle.config.ts  electrobun.config.ts  forge.config.ts  index.html  moon.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
apps/tauri/: .gitignore  Cargo.toml  moon.yml  package.json  tauri.conf.json  test_db.db
apps/tauri/.cargo/: config.toml
apps/tauri/.sqlx/: query-08a368668de225b63199cf634bfe946fe5b23ac4ab8d7e45fb71dc0e55402f46.json  query-0dde4c8890eb2804406417146c7bd1d281a6f7ba03285752abdada38dbc8a87a.json  query-12839b3dc6222fc5c7de4425afe1923357b0907430fff4519314999bfddedf02.json  query-14caadc4576d1dc7ad9993b80adfd1cabf07ae54d991c2a11e8d56e6764828d6.json  query-1608471e7f1c1d41c81164cf9f45982c05fa51662222204061f55cf143c6f1eb.json  query-214c8acea78b69770a2b7097de46c65a1d8e8f2197f2f20e4807639df3039039.json  query-2ae89b4315637dbb51dbac623c8f77ca38917a04cf41e44a151ac975d1fefc14.json  query-2bf2c5b8efc58151246c0f082bfcf9c8fe7aec85960a3068e35a00b87d2198e9.json  query-462a1ec8be55efe3eab3088a54e61b1c72557cc73be21a94c29775e52d62df4a.json  query-52a2175052be9009275688fafac006560af9e2dc868b54ef0b9e8f65e6849651.json  query-7c8823600ea270accaa5ea9d816dce75bb79551f8b7bf8c98db5d55a78d8e317.json  query-9e6ad43486e7327b2642413953f30de954df0005eee45a97172805a492cc5ac5.json  query-a62edaa3b5007e664d45b94801ddedf654cd45934a68ddd136d262fb8cef832d.json  query-b4da9d1cce2e24f49b8c5b5145c74521736f7763bce89c306ef7c5d0a7fdfba0.json  (+3 more)
apps/tauri/capabilities/: default.json
src/: app.rs  (+5 more)
(+706 files in other folders)
