[package]
name = "mynth-app"
version = "0.1.0"
description = "AI client"
authors = ["Tomasz Szczuciński (50BytesOfJohn)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mynth_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = { version = "0.5" }
reqwest = { version = "0.11", features = ["stream", "json"] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tauri-plugin-store = "2"
# lazy_static = "1.5"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "chrono",
  "migrate",
] }
tauri-plugin-devtools = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }
# Will be replaced by ULID
uuid = { version = "1.12", features = ["v4", "fast-rng", "serde"] }
# Added ULID for sortable, timestamp-embedded identifiers
ulid = { version = "1.2", features = ["serde"] }
tracing = { version = "0.1", features = ["attributes"] }
futures = "0.3.31"
thiserror = "1.0"                                        # For custom error handling
# Markdown to HTML conversion
pulldown-cmark = "0.13.0"
syntect = "5.2.0"
# MacOS keychain access for secure credential storage
security-framework = "3.2.0"
rig-core = "0.11.0"
